# poor-mans-4090

./: Cargo.toml  README.md
src/: aabb.rs  aabox.rs  aarect.rs  bvh.rs  camera.rs  constant_medium.rs  hittable.rs  hittable_list.rs  main.rs  material.rs  moving_sphere.rs  perlin.rs  random.rs  ray.rs  scenes.rs  sphere.rs  texture.rs
