[package]
name = "poor-mans-4090"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.26", features = ["derive"]}
image = "0.24.5"
indicatif = {version = "0.17.2", features = ["rayon"]}
nalgebra = "0.31.4"
rand = "0.8.5"
rayon = "1.5.3"
